Fix more product data, resize fitness icon on mobile

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -8,5 +8,10 @@
     img {
       height: 40px;
     }
+
+    .fitness-icon {
+      height: 30px;
+      width: 60px;
+    }
   }
 }
